--- a/.github/workflows/prowlarr-ci.yml
+++ b/.github/workflows/prowlarr-ci.yml
@@ -40,7 +40,7 @@ jobs:
           APP_VERSION=$(curl -sL "http://localhost:9696/api?apikey=${{ env.API_KEY }}" -I | awk 'BEGIN {RS="\r\n"; FS=": "}/^X-Application-Version/{print $2}')
           echo "PROWLARR_VERSION=$APP_VERSION" >> $GITHUB_ENV
           echo "PROWLARR_VERSION=$APP_VERSION" >> $GITHUB_STEP_SUMMARY
-          python scripts/convert_prowlarr_supported_indexers_to_markdown.py -k "${{ env.API_KEY }}" -u "http://localhost:9696" -o "prowlarr/supported-indexers.md"
+          python scripts/convert_prowlarr_supported_indexers_to_markdown.py -k "${{ env.API_KEY }}" -u "http://localhost:9696" -o "prowlarr/supported-indexers.md" -s "prowlarr/supported-indexers.md.hash"
           docker stop prowlarr
 
       - name: Commit changes
@@ -49,6 +49,7 @@ jobs:
           git config --global user.email "development@lidarr.audio"
           git checkout -b update-wiki-supported-indexers
           git add prowlarr/supported-indexers.md
+          git add prowlarr/supported-indexers.md.hash
           if git status | grep -q modified
           then
             git commit -m "[script] supported indexers $(date --iso-8601=seconds)"
