feat: add pre-commit hooks and spell checking CI
- Add pre-commit configuration with markdownlint, typos, and file checks
- Add GitHub Actions workflow for automated quality checks
- Configure markdownlint rules for WikiJS markdown format
- Add typos configuration with technical terms dictionary
- Enable trailing whitespace removal for all files including markdown
- Fix initial spelling errors found by spell checker
- Update gitignore for Python/Node.js development artifacts
- Add contributing documentation with setup instructions

Fixes #232

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,54 @@
-# Virtualenv
+# Python virtual environments
 venv/
+.venv/
+env/
+.env/
+
+# Node.js
+node_modules/
+
+# Python artifacts
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*.log
+
+# Pre-commit
+.pre-commit-cache/
