fix: correct typos across documentation
- Fix 'verisons' → 'versions' in contributing files
- Fix 'eligble' → 'eligible' in sonarr/system.md
- Fix 'thr' → 'the' in sonarr/faq.md
- Fix 'Additonal' → 'Additional' in sonarr/faq.md
- Fix 'Sur' → 'Sure' in sonarr/faq.md header
- Add 'titel' to typos.toml as legitimate German word

Resolves all typos identified by typos checker while preserving
intentional foreign language usage.

--- a/.typos.toml
+++ b/.typos.toml
@@ -21,6 +21,7 @@ broadcas = "broadcas" # Part of tracker name BroadcasTheNet
 hda = "hda" # Tracker acronym
 nam = "nam" # Part of "Viet Nam"
 searchin = "searchin" # API field name
+titel = "titel" # German word for "title" used in examples
 tork = "tork" # Tracker acronym
 tre = "tre" # Part of tracker name TreZzoR
 youre = "youre" # Used in anchor links like #youre-using-a-mapped-network-drive
