--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+default_stages: [pre-commit]
+fail_fast: true
+
 repos:
   # General file checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -27,7 +30,7 @@ repos:
     rev: v0.37.0
     hooks:
       - id: markdownlint
-        args: ["--config", ".markdownlint.json"]
+        args: ["--config", ".markdownlint.json", "--fix"]
         files: \.md$
         stages: [pre-commit, pre-merge-commit, pre-push, manual]
 
