--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,21 +1,64 @@
-name: Pre-commit
+name: Documentation Quality Checks
 
 on:
-  pull_request:
   push:
-    branches: [main, master]
+    branches: [master, main]
+    paths: ["**.md", "**.yaml", "**.yml", "**.json", ".pre-commit-config.yaml"]
+  pull_request:
+    branches: [master, main]
+    paths: ["**.md", "**.yaml", "**.yml", "**.json", ".pre-commit-config.yaml"]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  pre-commit:
+  documentation-quality:
     runs-on: ubuntu-latest
+    name: Quality Checks (Markdown, Typos, Formatting)
+    
     steps:
-      - uses: actions/checkout@v5
-      - uses: actions/setup-python@v6
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v5
         with:
-          python-version: "3.x"
-      - uses: actions/setup-node@v5
+          fetch-depth: 0
+          
+      - name: 🐍 Setup Python 3.11
+        uses: actions/setup-python@v6
         with:
-          node-version: "18"
-      - uses: pre-commit/action@v3.0.1
+          python-version: "3.11"
+          cache: 'pip'
+          
+      - name: 📦 Setup Node.js 20
+        uses: actions/setup-node@v5
         with:
-          extra_args: --all-files
+          node-version: "20"
+          cache: 'npm'
+          
+      - name: 🔧 Cache pre-commit hooks
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit-${{ runner.os }}-${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: |
+            pre-commit-${{ runner.os }}-
+            
+      - name: 📋 Install pre-commit dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pre-commit
+          
+      - name: 🔍 Run documentation quality checks
+        uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --all-files --show-diff-on-failure
+          
+      - name: 📊 Upload quality check results
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: quality-check-results
+          path: |
+            **/*.log
+            .pre-commit.log
+          retention-days: 7
