--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -16,49 +16,41 @@ jobs:
   documentation-quality:
     runs-on: ubuntu-latest
     name: Quality Checks (Markdown, Typos, Formatting)
-    
+
     steps:
       - name: 📥 Checkout repository
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-          
+
       - name: 🐍 Setup Python 3.11
         uses: actions/setup-python@v6
         with:
           python-version: "3.11"
-          cache: 'pip'
-          
+          cache: "pip"
+
       - name: 📦 Setup Node.js 20
         uses: actions/setup-node@v5
         with:
           node-version: "20"
-          cache: 'npm'
-          
-      - name: 🔧 Cache pre-commit hooks
+
+      - name: 🔧 Cache pre-commit environments
         uses: actions/cache@v4
         with:
-          path: ~/.cache/pre-commit
-          key: pre-commit-${{ runner.os }}-${{ hashFiles('.pre-commit-config.yaml') }}
+          path: |
+            ~/.cache/pre-commit
+            ~/.cache/pip
+          key: pre-commit-${{ runner.os }}-python-${{ hashFiles('.pre-commit-config.yaml') }}
           restore-keys: |
+            pre-commit-${{ runner.os }}-python-
             pre-commit-${{ runner.os }}-
-            
+
       - name: 📋 Install pre-commit dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pre-commit
-          
+
       - name: 🔍 Run documentation quality checks
         uses: pre-commit/action@v3.0.1
         with:
           extra_args: --all-files --show-diff-on-failure
-          
-      - name: 📊 Upload quality check results
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: quality-check-results
-          path: |
-            **/*.log
-            .pre-commit.log
-          retention-days: 7
