--- a/.github/workflows/prowlarr-ci.yml
+++ b/.github/workflows/prowlarr-ci.yml
@@ -24,21 +24,15 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: "3.10"
+          cache: "pip"
 
       - name: Setup Node.js
         uses: actions/setup-node@v5
         with:
           node-version: "18"
 
-      - name: Install pip packages
-        run: |
-          pip3 install -U --no-cache-dir \
-            requests==2.31.0 \
-            pycountry==23.12.11 \
-            python_iso639==2024.2.7
-
-      - name: Install pre-commit
-        run: pip install pre-commit
+      - name: Install Python dependencies
+        run: pip install -r requirements.txt
 
       - name: Cache pre-commit hooks
         uses: actions/cache@v4
