Add intentional terms to .typos.toml

--- a/.typos.toml
+++ b/.typos.toml
@@ -17,6 +17,7 @@ sonarr = "sonarr"
 whisparr = "whisparr"
 
 # Intentional names/terms that shouldn't be "corrected"
+aling = "aling" # tracker
 broadcas = "broadcas" # Part of tracker name BroadcasTheNet
 hda = "hda" # Tracker acronym
 nam = "nam" # Part of "Viet Nam"
